# pico

./: .gitignore  Cargo.toml  README.md  run.sh
examples/tendermint/app/: Cargo.toml
examples/tendermint/app/elf/: riscv32im-pico-zkvm-elf
examples/tendermint/app/src/: main.rs
gnark/field-ffi/: Cargo.toml
gnark/field-ffi/src/: koalabear.rs  lib.rs
perf/: Cargo.toml
perf/bench_apps/: Cargo.toml
perf/bench_apps/fibonacci/: Cargo.toml
perf/bench_apps/fibonacci/elf/: riscv32im-pico-zkvm-elf
perf/bench_apps/fibonacci/src/: main.rs
perf/bench_apps/reth-pico/elf/: riscv32im-pico-zkvm-elf
perf/bench_apps/reth-pico/src/: main.rs
perf/bench_data/: tendermint-elf
perf/src/common/: bench_field.rs  bench_program.rs  gnark_utils.rs  mod.rs
pico/examples/fibonacci/app/: Cargo.toml
pico/examples/fibonacci/app/elf/: riscv32im-pico-zkvm-elf
pico/examples/fibonacci/app/src/: main.rs
pico/examples/fibonacci/prover/: Cargo.toml
pico/examples/tendermint/prover/: Cargo.toml
pico/perf/: Cargo.toml
pico/perf/bench_apps/reth-pico/: Cargo.toml
pico/perf/bench_apps/zktls/: Cargo.toml
pico/perf/bench_apps/zktls/elf/: riscv32im-pico-zkvm-elf
pico/perf/bench_apps/zktls/src/: main.rs
pico/perf/bench_data/: fibonacci-elf
pico/perf/src/common/: print_utils.rs
pico/scripts/: Cargo.toml
scripts/: Cargo.toml
sdk/cli/: Cargo.toml
sdk/cli/src/: lib.rs
sdk/cli/src/subcommand/: build.rs  prove.rs
sdk/sdk/: Cargo.toml
sdk/sdk/src/: client.rs  io.rs  lib.rs  poseidon2_hash.rs  vk_client.rs
sdk/sdk/src/riscv_ecalls/: ed25519.rs  fptower.rs  halt.rs  io.rs  mod.rs  poseidon2.rs  sha_extend.rs  sys.rs  uint256_mul.rs
vm/: Cargo.toml
vm/examples/: bench.rs  parse_elf.rs  test_e2e.rs  test_e2e_vk.rs  test_e2e_vk_kb.rs  test_proverchain.rs  test_riscv.rs  test_riscv_emulator.rs  test_simple_recursion.rs
vm/examples/common/: parse_args.rs  print_utils.rs
vm/examples/patch-testing/: .gitignore  Cargo.toml
vm/src/: lib.rs
vm/src/chips/: mod.rs  trace.rs
vm/src/chips/chips/: mod.rs
vm/src/chips/chips/alu/: mod.rs
vm/src/chips/chips/alu_base/: columns.rs  constraints.rs  traces.rs
vm/src/chips/chips/alu_ext/: constraints.rs  traces.rs
vm/src/chips/chips/batch_fri/: traces.rs
vm/src/chips/chips/byte/: constraints.rs  utils.rs
vm/src/chips/chips/poseidon2/: traces.rs
vm/src/chips/chips/public_values/: columns.rs  constraints.rs  mod.rs  traces.rs
vm/src/chips/chips/riscv_cpu/: constraints.rs  mod.rs  traces.rs  utils.rs
vm/src/chips/chips/riscv_global/: columns.rs  traces.rs
vm/src/chips/chips/riscv_poseidon2/: event.rs  mod.rs  traces.rs
vm/src/chips/chips/riscv_program/: columns.rs  mod.rs  traces.rs
vm/src/chips/chips/select/: mod.rs  trace.rs
vm/src/chips/chips/syscall/: columns.rs  constraints.rs  traces.rs
vm/src/chips/chips/toys/: lookup_toy.rs  mod.rs
vm/src/chips/gadgets/: add.rs  add5.rs  and.rs  global_accumulation.rs  is_equal_word.rs  not.rs
vm/src/chips/gadgets/curves/: mod.rs
vm/src/chips/gadgets/field/: bn254.rs  field_lt.rs  mod.rs  utils.rs
vm/src/chips/gadgets/field_range_check/: mod.rs
vm/src/chips/gadgets/poseidon2/: constants.rs  traces.rs  utils.rs
vm/src/chips/gadgets/utils/: conversions.rs  limbs.rs  mod.rs  polynomial.rs
vm/src/chips/precompiles/edwards/: ed_decompress.rs
vm/src/chips/precompiles/fptower/: fp2_addsub.rs  mod.rs
vm/src/chips/precompiles/keccak256/: columns.rs  mod.rs  traces.rs
vm/src/chips/precompiles/poseidon2/: columns.rs  constraints.rs  mod.rs  traces.rs
vm/src/chips/precompiles/uint256/: mod.rs  traces.rs
vm/src/chips/precompiles/weierstrass/: weierstrass_add.rs  weierstrass_decompress.rs
vm/src/compiler/: mod.rs  word.rs
vm/src/compiler/recursion/: instruction.rs  program.rs
vm/src/compiler/recursion/circuit/: constraints.rs  domain.rs  fri.rs  hash.rs  merkle_tree.rs  mod.rs  stark.rs  types.rs
vm/src/compiler/recursion/constraints/: mod.rs  opcodes.rs
vm/src/compiler/recursion/ir/: bits.rs  block.rs  builder.rs  collections.rs  compiler.rs  mod.rs  var.rs
vm/src/compiler/riscv/: instruction.rs  mod.rs  opcode.rs  program.rs
vm/src/compiler/riscv/disassembler/: mod.rs
vm/src/compiler/test_elf/: riscv32im-pico-keccak-elf  riscv32im-pico-poseidon2-elf  riscv32im-pico-precompile-elf
vm/src/compiler/test_elf/bench/: fib  reth-17106222.in  tendermint
vm/src/configs/: config.rs
vm/src/configs/field_config/: mod.rs
vm/src/configs/stark_config/: bb_poseidon2.rs  kb_bn254_poseidon2.rs  kb_poseidon2.rs  m31_poseidon2.rs  mod.rs
vm/src/emulator/: emulator.rs  opts.rs  record.rs  stdin.rs
vm/src/emulator/recursion/: mod.rs
vm/src/emulator/riscv/: mod.rs  public_values.rs  record.rs  state.rs
vm/src/emulator/riscv/emulator/: instruction.rs  mod.rs  unconstrained.rs  util.rs
vm/src/emulator/riscv/hook/: ed_decompress.rs
vm/src/emulator/riscv/syscalls/: code.rs  commit.rs  hint.rs  mod.rs  syscall_context.rs  (+2 more)
vm/src/instances/: mod.rs
vm/src/instances/chiptype/: mod.rs  recursion_chiptype.rs  riscv_chiptype.rs
vm/src/instances/compiler/: mod.rs
vm/src/instances/configs/: embed_bb_bn254_poseidon2.rs  embed_kb_bn254_poseidon2.rs  mod.rs  recur_bb_poseidon2.rs  recur_kb_poseidon2.rs  recur_m31_poseidon2.rs  riscv_kb_poseidon2.rs
vm/src/instances/machine/: combine.rs  combine_vk.rs  compress.rs  compress_vk.rs  convert.rs  embed.rs  mod.rs  riscv.rs  simple.rs
vm/src/iter/: mod.rs
vm/src/iter/rayon/: mod.rs
vm/src/iter/single/: mod.rs
vm/src/machine/: chip.rs  field.rs  folder.rs  logger.rs  machine.rs  permutation.rs  proof.rs  prover.rs  utils.rs  witness.rs
vm/src/machine/builder/: base.rs  mod.rs  permutation.rs  public_values.rs  range_check.rs  scoped.rs  septic.rs  sub_builder.rs  word.rs
vm/src/machine/debug/: constraints.rs  lookups.rs
vm/src/machine/septic/: curve.rs  digest.rs  extension.rs  mod.rs
vm/src/primitives/: consts.rs  mod.rs
vm/src/primitives/poseidon2/: mersenne31.rs  mod.rs
vm/src/proverchain/: combine.rs  combine_vk.rs  compress.rs  compress_vk.rs  convert.rs  embed.rs  mod.rs  riscv.rs
(+452 files in other folders)
