[package]
name = "tendermint-example"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
serde_cbor = "0.11.2"
pico-sdk = { path = "../../../sdk/sdk" }
