[package]
name = "fibonacci-prover"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
pico-sdk = { path = "../../../sdk/sdk" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
alloy-sol-types = "0.8.0"
fibonacci-lib ={ path = "../lib"}