[package]
name = "reth-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-sdk.workspace = true
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/brevis-network/rsp.git", rev="01bee94adb32975d5af0cdd8c088a813c2068e1a" }