[package]
name = "patch-test-bigint"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
pico-sdk = { workspace = true }
crypto-bigint = { git = "https://github.com/brevis-network/crypto-bigint.git", branch = "patch-v1.0.0" }