[package]
name = "patch-test-sha3"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
pico-sdk = { workspace = true }
sha3 = { git = "https://github.com/brevis-network/hashes.git", package = "sha3", branch = "sha3-0.10.8-v1.0.0" }
